# KafkaExample

./: .gitignore  CMakeLists.txt  KafkaAdminClient.cpp  KafkaConsumer.cpp  KafkaManualCommitConsumer.cpp  KafkaProducer.cpp  README.md
ProtoBufMessages/: ProtoLog.proto  Vocabulary.proto
include/: JSONDatabaseVocabulary.h  KafkaConsumerConfig.h  KafkaConsumerWrapper.h  KafkaProducerConfig.h  KafkaProducerWrapper.h  Logger.h  ProtoLog.pb.h  UDPLogger.h  UDPServer.h  Vocabulary.pb.h
src/: JSONDatabaseVocabulary.cpp  KafkaConsumerWrapper.cpp  KafkaProducerWrapper.cpp  Logger.cpp  ProtoLog.pb.cc  UDPLogger.cpp  UDPServer.cpp  Vocabulary.pb.cc
vocabulary/adjectives/: adjectives.json
vocabulary/advanced_adjectives/: advanced_adjectives.json
vocabulary/advanced_adverbs/: advanced_adverbs.json
vocabulary/advanced_nouns/: advanced_nouns.json
vocabulary/advanced_prepositions/: advanced_prepositions.json
vocabulary/advanced_verbs/: advanced_verbs.json
vocabulary/adverbs/: adverbs.json
vocabulary/nouns/: nouns.json
vocabulary/phrasal_verbs/: phrasal_verbs.json
vocabulary/prepositions/: prepositions.json
vocabulary/verbs/: verbs.json
